# microSQL

./: CMakeLists.txt  README.md  test.index  test.tb  test.tb~
src/: #test.cpp#  API.cpp  API.h  B+tree.cpp  Interpret.cpp  Interpret.h  Macro.h  Struct.h  main.cpp  microSQL.cpp  mmain.cpp  test.cpp~
src/data/: commands  index.catlog  table.catlog  test2.tb  test34.table  test49.table  test52.table  test67.table
src/models/: #Buffer.h#  #Table.h#  .#Buffer.h  Address.h  Block.cpp  Block.h  Buffer.h  Condition.h  Index.h  Table.cpp  Table.h  TableInfo.h  TableRow.h  storage.cpp  storage.h
src/roles/: #BufferManager.h#  #IndexManager.h#  #RecordManager.h#  BTree.cpp  BTree.h  BufferManager.cpp  BufferManager.h  CatalogManager.cpp  CatalogManager.h  CatalogManager.h~  IndexManager.cpp  IndexManager.h  RecordManager.cpp  RecordManager.cpp~  RecordManager.h
src/utils/: #API.h#  #Request.h#  API.h  Condition.h  Interpreter.h  Request.h
